# amberize

./: .gitignore  Cargo.toml  README.md  email-archive-project-plan.md
.cargo/: config.toml.example
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
apps/desktop/src/: App.svelte  App.test.js  app.css  main.js
apps/desktop/src-tauri/: Cargo.toml  Info.plist  amberize.key.pub  build.rs  tauri.conf.json
apps/desktop/src-tauri/assets/: verfahrensdokumentation_template_de.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_commands.rs  app_state.rs  auditor_export.rs  background_sync.rs  documentation.rs  main.rs  menubar.rs  sync_status_text.rs
apps/desktop/src/components/: AccountSettings.svelte  AddAccountForm.svelte  ArchiveLocationScreen.svelte  ConfirmDialog.svelte  EmptyState.svelte  GeneralSettings.svelte  MainDashboard.svelte  MessagePreview.svelte  SettingsPage.svelte  StatusBar.svelte  VirtualList.svelte
apps/desktop/src/lib/: config.js  config.test.js  tauri_bridge.js  tauri_bridge.test.js
apps/landing/: .dockerignore  Dockerfile  README.md  fly.toml  nginx.conf  package-lock.json  package.json
apps/landing/src/: app.html
apps/landing/src/lib/: app.svelte.js  download-stats.json  i18n.js  reveal.js
apps/landing/src/routes/: +layout.svelte  +page.svelte
apps/landing/src/routes/datenschutz/: +page.svelte
apps/landing/src/routes/impressum/: +page.svelte
apps/landing/static/: manifest.webmanifest
apps/landing/static/images/: amberize.webm
crates/adapters/: Cargo.toml
crates/adapters/src/: imap.rs  lib.rs  oauth.rs  secrets.rs  sync.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: release-checklist.md
fixtures/mime/: README.md
scripts/: deploy_landing.sh  fetch_download_stats.py  release_verify.py  release_wizard.py
