[package]
name = "email_archiver_adapters"
version = "0.1.5"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
keyring = { version = "3", features = ["apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-imap = "0.11"
async-native-tls = "0.5"
futures-util = "0.3"
mail-parser = "0.11"
hashify = "=0.2.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

email_archiver_storage = { path = "../storage" }

