[package]
name = "email_archiver_storage"
version = "0.1.5"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
hex = "0.4"

